[tool.poetry]
name = "binjahub"
version = "0.1.0"
description = ""
authors = ["matteyeux <mathieu.hautebas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
python-multipart = "^0.0.6"

[tool.poetry.scripts]
oracle = "binjahub.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
